--- a/0x00-html_advanced/0-index.html
+++ b/0x00-html_advanced/0-index.html
@@ -1,3 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="en" dir="ltr">
+<head>
+    <meta charset="UTF-8">
+</head>
+<body>
+</body>
 </html>
